force-app/main/default/objects/mcdm_15__GreetingMapping__c/mcdm_15__GreetingMapping__c.object-meta.xml
<CustomObject>
    <description>Maps greeting options to object fields.</description>
    <label>Greeting Mapping</label>
    <nameField>
        <displayFormat>GM-{0000}</displayFormat>
        <label>Greeting Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Greeting Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>