force-app/main/default/objects/mcdm_15__GreetingMapping__c/fields/mcdm_15__FieldName__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__FieldName__c</fullName>
    <description>The field on the object whos value will be used.</description>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>