force-app/main/default/objects/mcdm_15__GreetingMapping__c/fields/mcdm_15__GreetingLabel__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__GreetingLabel__c</fullName>
    <description>User entered label for the greeting option.</description>
    <label>Greeting Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>