force-app/main/default/objects/mcdm_15__GreetingMapping__c/fields/mcdm_15__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__ObjectType__c</fullName>
    <description>The type of object the source field is on.</description>
    <label>Object Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>